GreenNao/greennao/log/build_2025-05-02_14-33-43/greennao/stderr.log
  File "/home/evichan/Desktop/2024-tfg-eva-fernandez/GreenNao/greennao/install/greennao/lib/python3.10/site-packages/greennao/GreenNaoLib.py", line 445
    if v != 0, w == 0:
             ^
SyntaxError: invalid syntax

